# smart-lead-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  temp-env-example
.cursor/plans/: mailmanager-399e5cfe.plan.md  writer-76539bb7.plan.md  writer-prompt-e1b3799c.plan.md
.cursor/rules/: architech.mdc  fastapi.mdc  langchain.mdc
cli/: __init__.py  batch_findkp.py  compose_and_send.py  findkp.py  mail_manager.py  main.py  writer.py
core/: analysis.py  generation.py  schemas.py  search.py
core/email/: base_sender.py  esp_sender.py  smtp_sender.py
core/search/: __init__.py  base.py  google_provider.py  serper_provider.py
database/: connection.py  models.py  repository.py
database/sql/: 001_findkp_schema.sql  001_initial_schema.sql  002_add_company_positioning_brief.sql  003_serper_api_tables.sql  004_add_public_emails_and_nullable_email.sql  004_trade_records.sql  005_processed_files.sql  006_add_company_local_name.sql  007_add_company_country.sql  008_mail_manager_schema.sql  009_oauth2_callbacks.sql  010_oauth2_tokens.sql
docs/: CURSOR_WORK.md  CURSOR_WORK_25_11_12.md  CURSOR_WORK_25_11_13.md  FINDKP_BUSINESS_LOGIC.md  MAIL_MANAGER_ARCHITECTURE.md  MAIL_MANAGER_DESIGN.md  PROJECT_STRUCTURE.md  architecture_design.md  database_structure.sql  llm_architecture.md
docs/design/: search_stategy.md
findkp/: __init__.py  email_search_strategy.py  prompts.py  result_aggregator.py  router.py  search_strategy.py  service.py
llm/: __init__.py  factory.py  glm_wrapper.py
logs/: __init__.py
mail_manager/: __init__.py  email_sender.py  oauth2_manager.py  router.py  service.py  utils.py
mail_manager/senders/: __init__.py  factory.py  gmail_sender.py  resend_sender.py
prompts/: __init__.py
prompts/findkp/: __init__.py
prompts/writer/: VN_MAIL_GENERATOR.py  WRITER_V1.py  WRITER_V2.py  WRITER_V3.py  WRITER_V4.py  WRITER_V4_LIGHT.py  W_VN_MAIL_GENERATOR.PY  W_VN_PROMPT.py  (+1 more)
schemas/: base.py  contact.py  mail_manager.py  writer.py
scripts/: make_t_json.py
writer/: __init__.py  router.py  service.py
(+2 files in other folders)
