[project]
name = "smart-lead-agent"
version = "1.0.0"
description = "智能销售代理系统 - 自动化潜在客户开发流程"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "langchain>=1.0.3",
    "langgraph>=1.0.2",
    "langchain-deepseek>=1.0.0",
    "zai-sdk>=0.0.4",
    "aiomysql>=0.3.2",
    "click>=8.0.0",
    "loguru>=0.7.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "tenacity>=8.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = []
package = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cli", "core", "database", "findkp", "llm", "logs", "mail_manager", "prompts", "schemas", "writer"]
py-modules = ["config"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[project.scripts]
smart-lead = "cli.main:cli"

